@@ -331,3 +331,6 @@
 
 2020-2-4
     * add y.adj=NULL, auto.adj.y=FALSE to plot.chngptm so that the fitted lines can be adjusted to go through the data points
+
+2020-2-7
+    * add transform to plot.chngpt
